bugfix(layout):make foodcards center alignment

--- a/src/components/FoodCards/foodcards.module.css
+++ b/src/components/FoodCards/foodcards.module.css
@@ -1,5 +1,9 @@
 /* HotSpot part*/
 
+.hotSpotGroup {
+    margin: 0 12rem 0 12rem;
+}
+
 .slideItem {
 
     width: 90%;
